Add backend service to import/export database