@@ -1,7 +1,18 @@
 package example.controllers.utils;
 
+import example.constants.Constant;
+import example.constants.ParamNames;
+import example.constants.ParamValues;
+import example.services.FileStorageService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.HashMap;
@@ -10,43 +21,79 @@ import java.util.Map;
 @RestController
 @ResponseBody
 public class BackupAndRestoreController {
-    @RequestMapping(value = "/backup", method = RequestMethod.POST)
-    public Map backupDump() throws IOException {
-        Map<String, Object> response = new HashMap<>();
+    @Autowired
+    private FileStorageService fileStorageService;
 
+    @RequestMapping(value = "/backup", method = RequestMethod.GET)
+    public ResponseEntity<Resource> backupDump(HttpServletRequest request) throws Exception {
         String workingDir = System.getProperty("user.dir");
-        StringBuilder query = new StringBuilder();
+        String query = "mongoexport " +
+                "--collection " + Constant.COLLECTION_NAME + " " +
+                "--db " + Constant.DATABASE_NAME + " " +
+                "--out " + workingDir + "/dump/dump.json";
 
-        query.append("cd ").append(workingDir)
-                .append(" && ");
+        Process p = Runtime.getRuntime().exec(new String[]{"bash", "-c", query});
+        int i;
+        while( (i=p.getInputStream().read()) != -1) {
+            System.out.write(i);
+        }
+        while( (i=p.getErrorStream().read()) != -1) {
+            System.err.write(i);
+        }
+        p.waitFor();
 
-        query.append("mkdir dump && cd ./dump || cd ./dump ")
-                .append(" && ");
 
-        query.append("rm -r ./*")
-                .append(" && ");
+        // Load file as Resource
+        Resource resource = fileStorageService.loadFileAsResource(workingDir + "/dump/dump.json");
 
-        query.append("mongodump " +
-                "--collection course " +
-                "--db github " +
-                "--out ./")
-                .append(" && ");
+        // Try to determine file's content type
+        String contentType = null;
+        try {
+            contentType = request.getServletContext().getMimeType(resource.getFile().getAbsolutePath());
+        } catch (IOException ex) {
+            System.out.println("Could not determine file type.");
+        }
 
-        query.append("zip -r ")
-                .append(workingDir)
-                .append("/dump/dump.zip ")
-                .append(workingDir).append("/dump/*");
 
-        Runtime.getRuntime().exec(query.toString());
+        Runtime.getRuntime().exec(new String[]{"bash", "-c", "rm -rf " + workingDir + "/dump/*"});
 
-        return response;
+        return ResponseEntity.ok()
+                .contentType(MediaType.parseMediaType(contentType))
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + resource.getFilename() + "\"")
+                .body(resource);
     }
 
     @RequestMapping(value = "/restore", method = RequestMethod.POST)
-    public Map restoreDump(@RequestBody Map<String, Object> body,
-                          HttpServletResponse httpServletResponse){
+    public Map<String, Object> restoreDump(@RequestParam("file") MultipartFile file,
+                                           @RequestParam(value = "dropOld", required = false) boolean dropFlag,
+                                           HttpServletResponse httpServletResponse) {
         Map<String, Object> response = new HashMap<>();
 
+        try {
+            String fileName = fileStorageService.storeFile(file);
+
+            String workingDir = System.getProperty("user.dir");
+            String query = "mongoimport " +
+                    "--collection " + Constant.COLLECTION_NAME + " " +
+                    "--db " + Constant.DATABASE_NAME + " " +
+                    (dropFlag ? "--drop " : "") +
+                    workingDir + "/dump/" + fileName + " ";
+            query += "&& rm -rf " + workingDir + "/dump/*";
+
+            Process p = Runtime.getRuntime().exec(new String[]{"bash", "-c", query});
+            int i;
+            while( (i=p.getInputStream().read()) != -1) {
+                System.out.write(i);
+            }
+            while( (i=p.getErrorStream().read()) != -1) {
+                System.err.write(i);
+            }
+            p.waitFor();
+        } catch (Exception e) {
+            e.printStackTrace();
+            response.put(ParamNames.ERROR_KEY, ParamValues.ERROR_IMPORTING_DATABASE);
+            httpServletResponse.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+        }
 
         return response;
     }
